# sightrag

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_sightrag.py
cpp/: CMakeLists.txt
cpp/include/: sightrag_core.hpp
cpp/src/: image_ops.cpp  pybind_module.cpp
demo_sightrag/: download_demo_images.py  sightrag_images.py  sightrag_livecam.py  sightrag_restapi.py  sightrag_video.py
demo_sightrag/camera_captures/: README.md
demo_sightrag/input_images/: README.md
demo_sightrag/reference_images/: README.md
demo_sightrag/video_samples/: README.md
docs/: DOCKER.md
examples/: basic_usage.py  camera_example.py  custom_domain_example.py  rest_api_example.py
notebooks/: SightRAG_Colab_Demo.ipynb  SightRAG_Demo.ipynb
sightrag/: __init__.py  api.py  cli.py  core.py  detector.py  embedder.py  indexer.py  reranker.py  retriever.py  visualizer.py
sightrag/backends/: __init__.py  base.py  onnx_backend.py  openvino_backend.py  pytorch_backend.py  tensorrt_backend.py
sightrag/detectors/: __init__.py  base.py  grounding_dino.py
sightrag/embedders/: __init__.py  base.py  reid_embedder.py
sightrag/store/: __init__.py  base.py  chroma_store.py  qdrant_store.py  sqlite_store.py
sightrag/utils/: __init__.py  camera.py  image.py  video.py
tests/: test_core.py
