[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sightrag"
version = "0.1.0"
description = "SightRAG — Image and Video RAG. See. Search. Retrieve."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Ant (VK-Ant)"}]
keywords = ["computer-vision", "rag", "image-search", "video-search", "retrieval", "clip", "yolo"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]
all = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]

[project.urls]
Homepage = "https://github.com/VK-Ant/sightrag"
Issues = "https://github.com/VK-Ant/sightrag/issues"
