[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sightrag"
version = "0.1.3"
description = "SightRAG: Image and Video RAG. See. Search. Retrieve."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Venkatkumar Rajan (VK-Ant)"}]
keywords = ["computer-vision", "rag", "image-search", "video-search", "retrieval", "clip", "yolo"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.4.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]
all = ["chromadb>=0.4.0", "fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]

[project.urls]
Homepage = "https://github.com/VK-Ant/sightrag"
Issues = "https://github.com/VK-Ant/sightrag/issues"
