[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sightrag"
version = "0.3.0"
description = "SightRAG — Image and Video RAG. See. Search. Retrieve."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Ant (VK-Ant)"}]
keywords = ["computer-vision", "rag", "image-search", "video-search", "clip", "yolo"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
fast = ["pybind11>=2.11.0"]
onnx = ["onnxruntime>=1.16.0"]
chroma = ["chromadb>=0.4.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]
all = ["pybind11>=2.11.0", "onnxruntime>=1.16.0", "chromadb>=0.4.0",
       "fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]

[project.urls]
Homepage = "https://github.com/VK-Ant/sightrag"
Issues = "https://github.com/VK-Ant/sightrag/issues"
