cmake_minimum_required(VERSION 3.14)
project(sightrag_cpp CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(OpenCV REQUIRED)
find_package(pybind11 REQUIRED)
pybind11_add_module(sightrag_cpp src/image_ops.cpp src/pybind_module.cpp)
target_include_directories(sightrag_cpp PRIVATE include ${OpenCV_INCLUDE_DIRS})
target_link_libraries(sightrag_cpp PRIVATE ${OpenCV_LIBS})
